K8s/ingress/apigateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apigateway.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigateway
            port:
              number: 8086
